--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,10 @@
 	    </p>
 	<% end %>
 	
-      <ul>
-        <a href="http://www....">Home</a><br />
-        <a href="http://www..../faq">Questions</a><br />
-        <a href="http://www..../news">News</a><br />
-        <a href="http://www..../contact">Contact</a><br />
-      </ul>
+    <a href="http://localhost:3000/">Home</a><br />
+    <a href="http://www..../faq">Questions</a><br />
+    <a href="http://www..../news">News</a><br />
+    <a href="http://www..../contact">Contact</a><br />
     </div>
     <div id="main">
       <%= yield %>
