--- a/app/assets/stylesheets/depot.css
+++ b/app/assets/stylesheets/depot.css
@@ -16,54 +16,6 @@
         border-bottom: 3px dotted #77d;
 }
 
-/* Styles for products/index */
-
-#product_list table {
-        border-collapse: collapse;
-}
-
-#product_list table tr td {
-        padding: 5px;
-        vertical-align: top;
-}
-
-#product_list .list_image {
-  width:        60px;
-  height:       70px;
-}
-
-#product_list .list_description {
-  width:        60%;
-}
-
-#product_list .list_description dl {
-        margin: 0;
-}
-
-#product_list .list_description dt {
-	color:        #244;
-	font-weight:  bold;
-	font-size:    larger;
-}
-
-#product_list .list_description dd {
-        margin: 0;
-}
-
-#product_list .list_actions {
-  font-size:    x-small;
-  text-align:   right;
-  padding-left: 1em;
-}
-
-#product_list .list_line_even {
-  background:   #e0f8f8;
-}
-
-#product_list .list_line_odd {
-  background:   #f8b0f8;
-}
-
 /* START:mainlayout */
 /* Styles for main page */
 
@@ -74,7 +26,7 @@
   border-bottom: 5px solid;
   font: italic small-caps bold 100px/150px 'chalkduster', serif;
   color: #87cefa;
-  text-align: middle;
+  text-align: center;
   height: 150px;
 }
 
@@ -105,8 +57,9 @@
 }
 
 #side a {
+  float: auto;
   color: #87cefa;
-  font-size: 23px;
+  font-size: 20px;
 }
 /* END:mainlayout */
 
@@ -213,7 +166,7 @@
   color: #87cefa;
   background: #303030;
   font-family: sans-serif;
-  font-size:xx-large;
+  font-size:x-large;
   padding: 0.5em 1em;
 }
 
@@ -230,10 +183,6 @@
 .depot_form select, .depot_form textarea, .depot_form input {
   margin-left: 0.5em;
   font-size:large;
-}
-
-.depot_form .submit {
-  margin-left: 4em;
 }
 
 .depot_form div {
